packages/typ/tests/fixtures/diagnostics/0829_polyvar_duplicate_tag_conflict_07.ml.infer.expected
File "0829_polyvar_duplicate_tag_conflict_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0829_polyvar_duplicate_tag_conflict_07 is not a valid module name.

File "0829_polyvar_duplicate_tag_conflict_07.ml", line 1, characters 14-40:
1 | let bad_eta : [ `A of int | `A of bool ] -> int =
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This variant type contains a constructor [ `A of bool ]
       which should be [ `A of int ]
