packages/typ/tests/fixtures/diagnostics/0829_polyvar_duplicate_tag_conflict_07.ml
let bad_eta : [ `A of int | `A of bool ] -> int =
  fun _ -> 6
